--- a/public/stylesheets/wp.scss
+++ b/public/stylesheets/wp.scss
@@ -5159,11 +5159,16 @@ fieldset[disabled] .navbar-inverse .btn-link:hover, .navbar-inverse .btn-link[di
   > {
     li {
       display: inline;
+      span.title {
+        display: none;
+      }
       > {
         a, span {
           position: relative;
           float: left;
-          padding: 6px 12px;
+          padding: 6px;
+          display: inline-block;
+          width: 38px;
           line-height: 1.42857143;
           text-decoration: none;
           color: #428bca;
@@ -5231,6 +5236,13 @@ fieldset[disabled] .navbar-inverse .btn-link:hover, .navbar-inverse .btn-link[di
   }
 }
 
+@media (max-width: 400px) {
+  .pagination > li > a,
+  .pagination > li > span {
+    font-size: 12px;
+    width: 30px;
+  }
+}
 .pagination-lg > li {
   > {
     a, span {
